--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<!-- 
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,4 +13,45 @@
   <body>
     <%= yield %>
   </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Inspiration</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+</head>
+<nav class="navbar navbar-expand-lg navbar">
+  <div class="container">
+    <a class="navbar-brand" href="/ideas">The Idea App</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <%= link_to 'New Idea', new_idea_path, class: "nav-link text-info" %>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<body>
+<div class="container">
+  <%= yield %>
+</div>
+</body>
+<footer>
+  <div class="container">
+    MongoDB Atlas and Ruby on Rails <%= Time.now.year %>
+  </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </html>
